<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lq_blue"
        tools:context=".presentation.NoRecommendationFragment">


    <ImageView
            android:id="@+id/image_banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:src="@drawable/img_banner3"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_banner">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/great_news"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="65dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/no_recommendation_message"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_next"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/button_background_color"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textCapSentences"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/button_finish"
                android:textColor="@color/button_text_color"
                android:textSize="18sp"
                app:cornerRadius="12dp"
                android:enabled="true" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>