<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/customer_login_parent_view"
android:background="@color/lq_blue"
android:visibility="visible"
tools:context=".presentation.setup.StoreSetupFragment">


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/lq_red"
            app:trackThickness="6dp" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_action_back" />

    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="60dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_alignParentTop="true"
                android:text="@string/heading_device_setup"
                />

        <ImageView
                android:id="@+id/img_retailer_logo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_lucid_hearing"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/textview_heading"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfield_firstname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:hint="@string/device_setup_form_firstname"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorIconTint="@color/lq_error_red"
            app:errorTextColor="@color/lq_error_red"
            app:hintTextAppearance="@style/LoginFormTextInputHintLabel">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textfield_firstname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLength="25"
                android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfield_lastname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:hint="@string/device_setup_form_lastname"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorIconTint="@color/lq_error_red"
            app:errorTextColor="@color/lq_error_red"
            app:hintTextAppearance="@style/LoginFormTextInputHintLabel">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textfield_lastname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLength="25"
                android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfield_city"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:hint="@string/device_setup_form_city"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorIconTint="@color/lq_error_red"
            app:errorTextColor="@color/lq_error_red"
            app:hintTextAppearance="@style/LoginFormTextInputHintLabel">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textfield_city_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfield_zipcode"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:hint="@string/device_setup_form_state"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorIconTint="@color/lq_error_red"
            app:errorTextColor="@color/lq_error_red"
            app:hintTextAppearance="@style/LoginFormTextInputHintLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField1">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textfield_zipcode_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="5"
                android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfield_store"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:hint="@string/device_setup_form_store_number"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorIconTint="@color/lq_error_red"
            app:errorTextColor="@color/lq_error_red"
            app:hintTextAppearance="@style/LoginFormTextInputHintLabel">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/textview_store_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="30"
                android:maxLines="1"
                android:textSize="14sp"
                android:completionThreshold="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:fontFamily="@font/poppins_light"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_submit"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/lq_red"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textCapSentences"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/device_setup_form_submit"
            android:textSize="22sp"
            app:cornerRadius="12dp" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp">
        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_contact_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="60dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:text="@string/contact_support"
                />
        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="60dp"
                android:fontFamily="@font/poppins_medium"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/quickscreen_version"
                android:layout_below="@id/textview_contact_support"
                />

    </RelativeLayout>
</LinearLayout>
</ScrollView>