<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container_begin_setup_fragment"
        android:background="@color/lq_blue"
        tools:context=".presentation.setup.WifiSetupFragment">

    <RelativeLayout
            android:id="@+id/navigation_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">

        <ImageButton
                android:id="@+id/button_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_action_back"
                android:contentDescription="@string/button_back" />

    </RelativeLayout>
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="60dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_below="@id/navigation_header"
            android:text="@string/heading_connect_wifi"
            />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_connection_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="60dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_below="@id/textview_heading"
        />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_wifi_network"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="80dp"
            android:scrollbars="vertical"
            android:layout_below="@+id/textview_connection_status"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/button_background_color"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textCapSentences"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/button_next"
            android:textColor="@color/button_text_color"
            android:textSize="18sp"
            app:cornerRadius="12dp"
            android:enabled="true"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/rv_wifi_network" />

</RelativeLayout>